在产能统计里面增加一个列表控件用来显示总计

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -996,7 +996,7 @@ BEGIN
     LTEXT           "总体积(cm3):",IDC_STATIC1,19,92,63,8
 END
 
-IDD_DIALOG_OUTPUT1 DIALOG DISCARDABLE  0, 0, 420, 310
+IDD_DIALOG_OUTPUT1 DIALOG DISCARDABLE  0, 0, 420, 312
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -1004,7 +1004,7 @@ BEGIN
     COMBOBOX        IDC_COMBO_OUTPUT,112,5,60,124,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "List1",IDC_LIST_OUTPUT,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,24,413,271
+                    WS_BORDER | WS_TABSTOP,0,24,413,267
     LTEXT           "部门：",IDC_STATIC_DEPARTMENT,98,9,8,8,NOT WS_VISIBLE
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
                     DTS_RIGHTALIGN | WS_TABSTOP,196,2,60,15
@@ -1017,8 +1017,8 @@ BEGIN
     COMBOBOX        IDC_COMBO_WAY,48,5,48,59,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_EDIT_NAME,112,4,60,14,ES_AUTOHSCROLL
-    CONTROL         "List1",IDC_LIST_OUTPUT2,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,0,299,413,11
+    CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,302,413,10
 END
 
 IDD_DIALOG_PROGRESS DIALOG DISCARDABLE  0, 0, 100, 8
