add printer 在新增订单和修改订单中增加打印预览，打印，和导出到EXCEL

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -162,10 +162,10 @@ BEGIN
     LTEXT           "查询方式：",IDC_STATIC,5,10,41,8
 END
 
-IDD_DIGPREVIEW DIALOG DISCARDABLE  0, 0, 319, 263
+IDD_DIGPREVIEW DIALOG DISCARDABLE  0, 0, 210, 297
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "预览"
-FONT 10, "System"
+CAPTION "打印预览"
+FONT 12, "@宋体"
 BEGIN
 END
 
@@ -611,8 +611,8 @@ BEGIN
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,245,424,25
     PUSHBUTTON      "保存订单",IDC_BUTTON_SUBMITLIST,130,284,50,14
-    PUSHBUTTON      "取消",IDCANCEL,333,284,50,14,NOT WS_VISIBLE
-    DEFPUSHBUTTON   "确定",IDOK,396,283,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "取消",IDCANCEL,423,284,50,14,NOT WS_VISIBLE
+    DEFPUSHBUTTON   "确定",IDOK,486,283,50,14,NOT WS_VISIBLE
     EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,333,50,14,ES_AUTOHSCROLL
     PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,236,333,50,14,WS_DISABLED
     EDITTEXT        IDC_EDIT_DEPARTMENT,88,91,6,12,ES_AUTOHSCROLL | NOT 
@@ -665,9 +665,9 @@ BEGIN
     LTEXT           "元",IDC_STATIC,405,227,12,8
     CONTROL         "加急",IDC_CHECK_URGENT,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,452,153,32,10
-    PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,200,284,50,14,NOT 
-                    WS_VISIBLE
-    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,259,284,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,270,284,50,14
+    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,329,284,50,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,207,284,50,14
 END
 
 IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 563, 376
@@ -676,18 +676,18 @@ FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_QUERYLISTID,65,15,74,14,ES_AUTOHSCROLL
     PUSHBUTTON      "查询",IDC_BUTTON1,164,15,50,14
-    EDITTEXT        IDC_EDIT_LISTTNAME,218,62,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PEOPLE,364,62,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_RECEIVE_NAME,88,84,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PHONE,218,84,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ADDRESS,364,82,162,14,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO_DEPARTMENT,88,106,74,82,CBS_DROPDOWNLIST | 
+    EDITTEXT        IDC_EDIT_LISTTNAME,218,70,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEOPLE,364,70,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_RECEIVE_NAME,88,92,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PHONE,218,92,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ADDRESS,364,90,162,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO_DEPARTMENT,88,114,74,82,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_RECEIVEDATE,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,218,105,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,218,113,
                     74,15
     CONTROL         "DateTimePicker4",IDC_DATETIMEPICKER_ENDDATE,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,364,105,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,364,113,
                     74,15
     CONTROL         "建模",IDC_CHECK_MODELING,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,44,157,31,10
@@ -722,15 +722,15 @@ BEGIN
     EDITTEXT        IDC_EDIT_VOLUEME,463,225,50,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
                     ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,249,422,26
-    PUSHBUTTON      "修改订单",IDC_BUTTON_MODIFYLIST,130,292,50,14
-    PUSHBUTTON      "取消",IDCANCEL,235,290,50,14,NOT WS_VISIBLE
-    DEFPUSHBUTTON   "确定",IDOK,331,291,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "修改订单",IDC_BUTTON_MODIFYLIST,109,292,50,14
+    PUSHBUTTON      "取消",IDCANCEL,429,292,50,14,NOT WS_VISIBLE
+    DEFPUSHBUTTON   "确定",IDOK,484,292,50,14,NOT WS_VISIBLE
     EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,335,50,14,ES_AUTOHSCROLL
     PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,236,333,50,14
     PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,327,333,50,14
     GROUPBOX        "订单资料",IDC_STATIC,15,36,534,280
-    EDITTEXT        IDC_EDIT_LISTID,88,62,74,14,ES_AUTOHSCROLL | WS_DISABLED
-    EDITTEXT        IDC_EDIT_DEPARTMENT,88,106,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_LISTID,88,70,74,14,ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_EDIT_DEPARTMENT,88,114,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
     EDITTEXT        IDC_EDIT_SIZE,86,177,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
@@ -746,13 +746,13 @@ BEGIN
                     WS_VISIBLE
     EDITTEXT        IDC_EDIT_BILL,463,201,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    LTEXT           "订单号：",IDC_STATIC,43,68,38,8
-    LTEXT           "派单日期：",IDC_STATIC,176,112,42,8
-    LTEXT           "订单名称：",IDC_STATIC,176,68,42,8
-    LTEXT           "交货期限：",IDC_STATIC,310,112,44,8
-    LTEXT           "部门：",IDC_STATIC,43,112,40,8
-    LTEXT           "详细地址：",IDC_STATIC,310,90,43,8
-    LTEXT           "联系电话：",IDC_STATIC,176,90,42,8
+    LTEXT           "订单号：",IDC_STATIC,43,76,38,8
+    LTEXT           "派单日期：",IDC_STATIC,176,120,42,8
+    LTEXT           "订单名称：",IDC_STATIC,176,76,42,8
+    LTEXT           "交货期限：",IDC_STATIC,310,120,44,8
+    LTEXT           "部门：",IDC_STATIC,43,120,40,8
+    LTEXT           "详细地址：",IDC_STATIC,310,98,43,8
+    LTEXT           "联系电话：",IDC_STATIC,176,98,42,8
     LTEXT           "签单金额：",IDC_STATIC,312,231,41,8
     LTEXT           "尺寸：",IDC_STATIC,43,183,27,8
     LTEXT           "制作材料：",IDC_STATIC,415,183,40,8
@@ -763,14 +763,14 @@ BEGIN
     LTEXT           "误差范围：",IDC_STATIC,219,231,40,8
     LTEXT           "其他要求：",IDC_STATIC,43,255,41,8
     LTEXT           "数量：",IDC_STATIC,73,339,31,8
-    LTEXT           "收件人：",IDC_STATIC,43,90,34,8
-    LTEXT           "经办人：",IDC_STATIC,310,68,37,8
+    LTEXT           "收件人：",IDC_STATIC,43,98,34,8
+    LTEXT           "经办人：",IDC_STATIC,310,76,37,8
     LTEXT           "生产数量：",IDC_STATIC,312,183,40,8
     LTEXT           "打磨：",IDC_STATIC,234,207,26,8
     LTEXT           "发票随寄：",IDC_STATIC,415,207,42,8
     LTEXT           "用途：",IDC_STATIC,43,231,29,8
     GROUPBOX        "下单",IDC_STATIC,15,320,534,39
-    GROUPBOX        "基本信息",IDC_STATIC,28,48,509,83
+    GROUPBOX        "基本信息",IDC_STATIC,28,56,509,83
     GROUPBOX        "制作要求",IDC_STATIC,28,144,509,143
     LTEXT           "（",IDC_STATIC,324,159,8,8
     LTEXT           "）",IDC_STATIC,436,159,8,8
@@ -781,6 +781,9 @@ BEGIN
                     WS_TABSTOP,458,157,32,10
     PUSHBUTTON      "销单",IDC_BUTTON_UNDO_LIST,401,333,50,14
     PUSHBUTTON      "续单",IDC_BUTTON_CONTINUE_LIST,471,333,50,14
+    PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,282,292,50,14
+    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,361,292,50,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,206,292,50,14
 END
 
 IDD_DIALOG_LIST_QUERY DIALOG DISCARDABLE  0, 0, 539, 353
