--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -162,7 +162,7 @@ BEGIN
     LTEXT           "查询方式：",IDC_STATIC,5,10,41,8
 END
 
-IDD_DIGPREVIEW DIALOG DISCARDABLE  0, 0, 250, 353
+IDD_DIGPREVIEW DIALOG DISCARDABLE  0, 0, 300, 353
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "打印预览"
 FONT 12, "@宋体"
@@ -1155,6 +1155,11 @@ BEGIN
     IDD_GOODSMANAGESYSTEM_DIALOG, DIALOG
     BEGIN
         RIGHTMARGIN, 521
+    END
+
+    IDD_DIGPREVIEW, DIALOG
+    BEGIN
+        RIGHTMARGIN, 299
     END
 
     IDD_DIALOG_INPUT_BASEINFO, DIALOG
