add 4 modules of FI:proceeds,bill,cheek,query,detail 1.技术部的积分可以为0 2.调整打印比例screenx/600.0 3.增加财务管理四大模块：收款开票，核销，查询，明细

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -122,7 +122,7 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
 MENU IDR_MENU_TIPS
-FONT 14, "宋体", 0, 0, 0x1
+FONT 12, "宋体"
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -1097,6 +1097,112 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,5,12,33,8
     LTEXT           "从",IDC_STATIC,127,10,9,8
     LTEXT           "到",IDC_STATIC,207,9,9,8
+END
+
+IDD_DIALOG_FI_PROCEEDS DIALOG DISCARDABLE  0, 0, 408, 275
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "收款开票"
+FONT 12, "宋体"
+BEGIN
+    EDITTEXT        IDC_EDIT_QUERYLISTID,59,10,74,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "查询",IDOK,150,10,50,14
+    EDITTEXT        IDC_EDIT_PROCEEDS_WAY,75,107,62,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MONEY_PROCEEDS,195,107,55,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEOPLE_FI,326,107,54,14,ES_AUTOHSCROLL
+    CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_RECEIVEDATE,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,75,129,
+                    62,15
+    EDITTEXT        IDC_EDIT_COMMENT,195,130,186,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_BILL_WAY,75,187,62,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MONEY_BILL,195,187,55,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEOPLE_BILL,328,187,54,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_BILL_ID,75,210,62,14,ES_AUTOHSCROLL
+    CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_BILL,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,195,209,
+                    64,15
+    EDITTEXT        IDC_EDIT_COMMENT_BILL,328,210,54,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "收款开票",IDC_BUTTON_PROCEEDS,84,248,50,14
+    PUSHBUTTON      "取消",IDCANCEL,219,247,50,14
+    EDITTEXT        IDC_EDIT_PEOPLE_BUSINESS,325,51,54,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MONEY_TOTEL,194,51,55,14,ES_AUTOHSCROLL | 
+                    WS_DISABLED
+    EDITTEXT        IDC_EDIT_LISTID,74,51,62,14,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "订单号：",IDC_STATIC,27,56,38,8
+    LTEXT           "收款日期：",IDC_STATIC,28,135,40,8
+    LTEXT           "业务经办人：",IDC_STATIC,273,56,52,8
+    LTEXT           "收款备注：",IDC_STATIC,150,135,40,8
+    LTEXT           "签单金额：",IDC_STATIC,149,56,42,8
+    LTEXT           "开票金额：",IDC_STATIC,150,192,41,8
+    LTEXT           "发票类型：",IDC_STATIC,28,192,40,8
+    LTEXT           "收款人：",IDC_STATIC,274,112,40,8
+    LTEXT           "收款方式：",IDC_STATIC,28,112,40,8
+    LTEXT           "收款金额：",IDC_STATIC,150,112,43,8
+    LTEXT           "发票号码：",IDC_STATIC,28,215,41,8
+    GROUPBOX        "收款",IDC_STATIC,11,85,387,70
+    GROUPBOX        "开票",IDC_STATIC,11,168,387,70
+    LTEXT           "订单号：",IDC_STATIC,15,15,37,8
+    LTEXT           "元",IDC_STATIC,251,192,8,8
+    LTEXT           "元",IDC_STATIC,250,56,9,8
+    LTEXT           "元",IDC_STATIC,251,112,9,8
+    LTEXT           "开票人：",IDC_STATIC,276,192,40,8
+    LTEXT           "开票日期：",IDC_STATIC,150,215,40,8
+    LTEXT           "开票备注：",IDC_STATIC,276,215,40,8
+    GROUPBOX        "订单信息",IDC_STATIC,10,36,387,38
+END
+
+IDD_DIALOG_FI_CHECK DIALOG DISCARDABLE  0, 0, 401, 308
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,378,8,7,15
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,387,8,7,15
+    DEFPUSHBUTTON   "查询",IDOK,89,6,38,14
+    PUSHBUTTON      "导出",IDC_EXCEL,139,6,38,14
+    CONTROL         "List1",IDC_LIST_FI,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,33,401,275
+    COMBOBOX        IDC_COMBO_QUERY_WAY,14,8,57,30,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "核销",IDC_BUTTON_CHECK,188,6,38,14
+END
+
+IDD_DIALOG_FI_QUERY DIALOG DISCARDABLE  0, 0, 401, 308
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,331,7,29,15
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,368,7,24,15
+    DEFPUSHBUTTON   "查询",IDOK,88,6,38,14
+    PUSHBUTTON      "导出",IDC_EXCEL,138,6,38,14
+    CONTROL         "List1",IDC_LIST_FI,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,33,401,275
+    COMBOBOX        IDC_COMBO_QUERY_WAY,15,8,61,69,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "收款开票",IDC_BUTTON_PROCEEDS,189,6,50,14
+END
+
+IDD_DIALOG_FI_DETAIL DIALOG DISCARDABLE  0, 0, 401, 308
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,101,5,61,15
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,175,5,61,15
+    DEFPUSHBUTTON   "查询",IDOK,246,6,38,14
+    PUSHBUTTON      "导出",IDC_EXCEL,292,6,38,14
+    CONTROL         "List1",IDC_LIST_FI,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,33,401,275
+    COMBOBOX        IDC_COMBO_QUERY_WAY,383,12,16,69,CBS_DROPDOWNLIST | 
+                    CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "收款开票",IDC_BUTTON_PROCEEDS,338,6,50,14
+    EDITTEXT        IDC_EDIT_QUERY_LISTID,38,6,47,14,ES_AUTOHSCROLL
+    LTEXT           "订单号：",IDC_STATIC,5,10,33,8
+    LTEXT           "从",IDC_STATIC,90,9,9,8
+    LTEXT           "到",IDC_STATIC,164,9,9,8
 END
 
 
