--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -122,7 +122,7 @@ STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION |
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "LDD办公系统"
 MENU IDR_MENU_TIPS
-FONT 12, "宋体"
+FONT 12, "宋体", 0, 0, 0x1
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",TCS_FORCEICONLEFT | 
                     TCS_FORCELABELLEFT | TCS_BUTTONS | TCS_FIXEDWIDTH | 
@@ -561,7 +561,7 @@ END
 
 IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 562, 375
 STYLE WS_CHILD
-FONT 12, "宋体"
+FONT 12, "宋体", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDIT_LISTID,88,47,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LISTTNAME,218,47,74,14,ES_AUTOHSCROLL
@@ -1203,6 +1203,66 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,5,10,33,8
     LTEXT           "从",IDC_STATIC,90,9,9,8
     LTEXT           "到",IDC_STATIC,164,9,9,8
+END
+
+IDD_DIALOG_LIST_WEB DIALOG DISCARDABLE  0, 0, 400, 312
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,18,5,55,15
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,86,5,55,15
+    DEFPUSHBUTTON   "查询",IDOK,146,6,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,189,6,38,14
+    CONTROL         "List1",IDC_LIST_BASEINFO,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,27,400,283
+    LTEXT           "从",-1,7,9,9,8
+    LTEXT           "到",-1,76,8,9,8
+    PUSHBUTTON      "下单",IDC_BUTTON_LIST_START,233,6,38,14
+    LTEXT           "(选中一个订单后双击可下单)",IDC_STATIC_TIPS,278,9,105,8
+END
+
+IDD_DIALOG_STORAGE_IN DIALOG DISCARDABLE  0, 0, 554, 309
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "",IDC_RICHEDIT_PROVIDER,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,56,53,59,14
+    CONTROL         "",IDC_RICHEDIT_OPERATOR,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,156,53,59,14
+    CONTROL         "",IDC_RICHEDIT_DEPARTMENT,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,248,53,59,14
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER_PAYMENT,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,50,
+                    59,14
+    CONTROL         "List1",IDC_LIST_STORAGE_IN,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,6,94,453,191
+    PUSHBUTTON      "导出",IDC_EXCEL,16,6,38,14
+    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,69,6,38,14
+    PUSHBUTTON      "新建",IDC_BUTTON_NEW,146,6,38,14
+    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,207,6,38,14
+    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,269,6,38,14
+    LTEXT           "供应商：",IDC_STATIC,16,54,33,8
+    LTEXT           "经办人：",IDC_STATIC,123,54,33,8
+    LTEXT           "部门：",IDC_STATIC,223,54,25,8
+    LTEXT           "付款日期：",IDC_STATIC,314,54,41,8
+    LTEXT           "收货仓库：",IDC_STATIC,16,76,41,8
+    LTEXT           "摘要：",IDC_STATIC,122,74,25,8
+    LTEXT           "进货单",IDC_STATIC,16,32,25,8
+    LTEXT           "制单日期：",IDC_STATIC,398,11,41,8
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_CURRENT,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,442,6,83,
+                    15
+    LTEXT           "单据编号：",IDC_STATIC,399,30,41,8
+    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,26,83,14,ES_AUTOHSCROLL
+    CONTROL         "",IDC_RICHEDIT_STORAGE,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,56,72,59,14
+    CONTROL         "",IDC_RICHEDIT_DIGEST,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,156,70,261,14
+    CONTROL         "",IDC_RICHEDIT_MODIFY,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,436,50,40,14
+    EDITTEXT        IDC_EDIT_MODIFY2,437,71,40,14,ES_AUTOHSCROLL
 END
 
 
