add storage_in,storage_in_detail,storage_left 1.增加可编辑的列表控件 2.增加仓库管理的进货单，进货明细，库存余额

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -1223,46 +1223,84 @@ BEGIN
     LTEXT           "(选中一个订单后双击可下单)",IDC_STATIC_TIPS,278,9,105,8
 END
 
-IDD_DIALOG_STORAGE_IN DIALOG DISCARDABLE  0, 0, 554, 309
+IDD_DIALOG_STORAGE_IN DIALOG DISCARDABLE  0, 0, 554, 320
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
     CONTROL         "",IDC_RICHEDIT_PROVIDER,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,53,59,14
+                    WS_BORDER | WS_TABSTOP,56,74,59,14
     CONTROL         "",IDC_RICHEDIT_OPERATOR,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,53,59,14
+                    WS_BORDER | WS_TABSTOP,156,74,59,14
     CONTROL         "",IDC_RICHEDIT_DEPARTMENT,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,248,53,59,14
+                    WS_BORDER | WS_TABSTOP,248,74,59,14
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER_PAYMENT,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,50,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,71,
                     59,14
     CONTROL         "List1",IDC_LIST_STORAGE_IN,"SysListView32",LVS_REPORT | 
-                    WS_BORDER | WS_TABSTOP,6,94,453,191
+                    WS_BORDER | WS_TABSTOP,6,117,453,180
     PUSHBUTTON      "导出",IDC_EXCEL,16,6,38,14
     PUSHBUTTON      "打印",IDC_BUTTON_PRINT,69,6,38,14
-    PUSHBUTTON      "新建",IDC_BUTTON_NEW,146,6,38,14
-    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,207,6,38,14
-    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,269,6,38,14
-    LTEXT           "供应商：",IDC_STATIC,16,54,33,8
-    LTEXT           "经办人：",IDC_STATIC,123,54,33,8
-    LTEXT           "部门：",IDC_STATIC,223,54,25,8
-    LTEXT           "付款日期：",IDC_STATIC,314,54,41,8
-    LTEXT           "收货仓库：",IDC_STATIC,16,76,41,8
-    LTEXT           "摘要：",IDC_STATIC,122,74,25,8
-    LTEXT           "进货单",IDC_STATIC,16,32,25,8
-    LTEXT           "制单日期：",IDC_STATIC,398,11,41,8
+    PUSHBUTTON      "新建",IDC_BUTTON_NEW,142,6,38,14
+    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,290,6,38,14
+    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,335,6,38,14
+    LTEXT           "供应商：",IDC_STATIC,16,75,33,8
+    LTEXT           "经办人：",IDC_STATIC,123,75,33,8
+    LTEXT           "部门：",IDC_STATIC,223,75,25,8
+    LTEXT           "付款日期：",IDC_STATIC,314,75,41,8
+    LTEXT           "收货仓库：",IDC_STATIC,16,97,41,8
+    LTEXT           "摘要：",IDC_STATIC,122,95,25,8
+    LTEXT           "进货单",IDC_STATIC,16,41,25,8
+    LTEXT           "制单日期：",IDC_STATIC,398,27,41,8
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_CURRENT,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,442,6,83,
-                    15
-    LTEXT           "单据编号：",IDC_STATIC,399,30,41,8
-    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,26,83,14,ES_AUTOHSCROLL
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,442,22,
+                    83,15
+    LTEXT           "单据编号：",IDC_STATIC,399,46,41,8
+    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,42,83,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_STORAGE,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,72,59,14
+                    WS_BORDER | WS_TABSTOP,56,93,59,14
     CONTROL         "",IDC_RICHEDIT_DIGEST,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,70,261,14
-    CONTROL         "",IDC_RICHEDIT_MODIFY,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,436,50,40,14
-    EDITTEXT        IDC_EDIT_MODIFY2,437,71,40,14,ES_AUTOHSCROLL
+                    WS_BORDER | WS_TABSTOP,156,91,261,14
+    CONTROL         "",IDC_RICHEDIT_MODIFY,"RICHEDIT",ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE | WS_BORDER | WS_TABSTOP,446,73,9,14
+    EDITTEXT        IDC_EDIT_MODIFY2,437,71,8,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    PUSHBUTTON      "修改",IDC_BUTTON_MODIFY,191,6,38,14
+    PUSHBUTTON      "查询",IDC_BUTTON_QUERY,243,6,38,14
+    CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,5,303,455,11
+END
+
+IDD_DIALOG_STORAGE_LEFT DIALOG DISCARDABLE  0, 0, 400, 312
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,53,5,55,15
+    DEFPUSHBUTTON   "查询",IDOK,144,6,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,199,6,38,14
+    CONTROL         "List1",IDC_LIST_STORAGE_LEFT,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,27,400,257
+    LTEXT           "截止时间：",IDC_STATIC,10,9,41,8
+    CONTROL         "List2",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,297,400,12
+END
+
+IDD_DIALOG_STORAGE_IN_DETAIL DIALOG DISCARDABLE  0, 0, 400, 312
+STYLE WS_CHILD
+FONT 12, "宋体"
+BEGIN
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_END,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,230,5,55,
+                    15
+    DEFPUSHBUTTON   "查询",IDOK,297,6,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,352,6,38,14
+    CONTROL         "List1",IDC_LIST_STORAGE_DETAIL,"SysListView32",
+                    LVS_REPORT | WS_BORDER | WS_TABSTOP,0,27,400,281
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_BEGIN,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,163,5,55,
+                    15
+    LTEXT           "到",IDC_STATIC,220,9,9,8
+    LTEXT           "从",IDC_STATIC,151,9,9,8
 END
 
 
