--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -222,7 +222,7 @@ BEGIN
     GROUPBOX        "订单资料",IDC_STATIC,7,7,429,171
     LTEXT           "订单号：",IDC_STATIC,28,24,31,8
     LTEXT           "客户名：",IDC_STATIC,161,24,31,8
-    LTEXT           "收单日期：",IDC_STATIC,28,68,38,8
+    LTEXT           "派单日期：",IDC_STATIC,28,68,38,8
     LTEXT           "交货日期：",IDC_STATIC,161,68,38,8
     LTEXT           "部门：",IDC_STATIC,28,46,23,8
     LTEXT           "详细地址：",IDC_STATIC,161,46,38,8
@@ -561,7 +561,7 @@ END
 
 IDD_DIALOG_NEW_LIST DIALOGEX 0, 0, 562, 375
 STYLE WS_CHILD
-FONT 12, "宋体", 0, 0, 0x1
+FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_LISTID,88,47,74,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LISTTNAME,218,47,74,14,ES_AUTOHSCROLL
@@ -636,7 +636,7 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,43,53,42,8
     LTEXT           "派单日期：",IDC_STATIC,176,97,41,8
     LTEXT           "订单名称：",IDC_STATIC,176,53,41,8
-    LTEXT           "交货期限：",IDC_STATIC,310,97,42,8
+    LTEXT           "交货日期：",IDC_STATIC,310,97,42,8
     LTEXT           "部门：",IDC_STATIC,43,97,39,8
     LTEXT           "详细地址：",IDC_STATIC,310,75,46,8
     LTEXT           "联系电话：",IDC_STATIC,176,75,41,8
@@ -671,7 +671,7 @@ BEGIN
     PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,207,284,50,14
 END
 
-IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 563, 376
+IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 563, 400
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
@@ -727,8 +727,8 @@ BEGIN
     PUSHBUTTON      "取消",IDCANCEL,429,292,50,14,NOT WS_VISIBLE
     DEFPUSHBUTTON   "确定",IDOK,484,292,50,14,NOT WS_VISIBLE
     EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,335,50,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,236,333,50,14
-    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,327,333,50,14
+    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,476,335,50,14
+    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,72,357,50,14
     GROUPBOX        "订单资料",IDC_STATIC,15,36,534,280
     EDITTEXT        IDC_EDIT_LISTID,88,70,74,14,ES_AUTOHSCROLL | WS_DISABLED
     EDITTEXT        IDC_EDIT_DEPARTMENT,88,114,6,14,ES_AUTOHSCROLL | NOT 
@@ -750,7 +750,7 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,43,76,38,8
     LTEXT           "派单日期：",IDC_STATIC,176,120,42,8
     LTEXT           "订单名称：",IDC_STATIC,176,76,42,8
-    LTEXT           "交货期限：",IDC_STATIC,310,120,44,8
+    LTEXT           "交货日期：",IDC_STATIC,310,120,44,8
     LTEXT           "部门：",IDC_STATIC,43,120,40,8
     LTEXT           "详细地址：",IDC_STATIC,310,98,43,8
     LTEXT           "联系电话：",IDC_STATIC,176,98,42,8
@@ -763,14 +763,14 @@ BEGIN
     LTEXT           "体积：",IDC_STATIC,431,231,27,8
     LTEXT           "误差范围：",IDC_STATIC,219,231,40,8
     LTEXT           "其他要求：",IDC_STATIC,43,255,41,8
-    LTEXT           "数量：",IDC_STATIC,73,339,31,8
+    LTEXT           "数量：",IDC_STATIC,73,341,31,8
     LTEXT           "收件人：",IDC_STATIC,43,98,34,8
     LTEXT           "经办人：",IDC_STATIC,310,76,37,8
     LTEXT           "生产数量：",IDC_STATIC,312,183,40,8
     LTEXT           "打磨：",IDC_STATIC,234,207,26,8
     LTEXT           "发票随寄：",IDC_STATIC,415,207,42,8
     LTEXT           "用途：",IDC_STATIC,43,231,29,8
-    GROUPBOX        "下单",IDC_STATIC,15,320,534,39
+    GROUPBOX        "下单",IDC_STATIC,15,320,534,61
     GROUPBOX        "基本信息",IDC_STATIC,28,56,509,83
     GROUPBOX        "制作要求",IDC_STATIC,28,144,509,143
     LTEXT           "（",IDC_STATIC,324,159,8,8
@@ -780,12 +780,20 @@ BEGIN
     LTEXT           "元",IDC_STATIC,408,231,8,8
     CONTROL         "加急",IDC_CHECK_URGENT,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,458,157,32,10
-    PUSHBUTTON      "销单",IDC_BUTTON_UNDO_LIST,401,333,50,14
-    PUSHBUTTON      "续单",IDC_BUTTON_CONTINUE_LIST,471,333,50,14
+    PUSHBUTTON      "销单",IDC_BUTTON_UNDO_LIST,146,357,50,14
+    PUSHBUTTON      "续单",IDC_BUTTON_CONTINUE_LIST,216,357,50,14
     PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,362,292,50,14,NOT 
                     WS_VISIBLE
     PUSHBUTTON      "打印",IDC_BUTTON_PRINT,274,292,50,14
     PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,190,292,50,14
+    CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_START2,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,229,334,
+                    74,15
+    CONTROL         "DateTimePicker4",IDC_DATETIMEPICKER_END2,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,375,334,
+                    74,15
+    LTEXT           "下单日期：",IDC_STATIC,187,341,42,8
+    LTEXT           "交货日期：",IDC_STATIC,321,341,44,8
 END
 
 IDD_DIALOG_LIST_QUERY DIALOG DISCARDABLE  0, 0, 539, 353
@@ -838,7 +846,7 @@ BEGIN
     LTEXT           "订单号：",IDC_STATIC,43,103,37,8
     LTEXT           "派单日期：",IDC_STATIC,176,147,42,8
     LTEXT           "订单名称：",IDC_STATIC,176,103,42,8
-    LTEXT           "交货期限：",IDC_STATIC,310,147,44,8
+    LTEXT           "交货日期：",IDC_STATIC,310,147,44,8
     LTEXT           "部门：",IDC_STATIC,43,147,45,8
     LTEXT           "详细地址：",IDC_STATIC,310,125,42,8
     LTEXT           "联系电话：",IDC_STATIC,176,125,42,8
@@ -871,16 +879,14 @@ IDD_DIALOG_MAKEING DIALOG DISCARDABLE  0, 0, 400, 309
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,295,6,38,14
+    DEFPUSHBUTTON   "查询",IDC_BUTTON_SCHDEULE_SELECT,124,7,38,14
     CONTROL         "List1",IDC_LIST_SCHDEULE,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,27,400,282
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,124,6,60,15
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,237,6,24,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,206,5,59,15
-    LTEXT           "从",IDC_STATIC,112,10,9,8
-    LTEXT           "到",IDC_STATIC,192,8,9,8
-    PUSHBUTTON      "导出",IDC_EXCEL,347,6,38,14
+                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,265,6,21,15
+    PUSHBUTTON      "导出",IDC_EXCEL,176,7,38,14
     LTEXT           "部门：",IDC_STATIC,10,12,25,8
     COMBOBOX        IDC_COMBO_DEPARTMENT,38,9,64,87,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
@@ -1227,45 +1233,41 @@ IDD_DIALOG_STORAGE_IN DIALOG DISCARDABLE  0, 0, 554, 320
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    CONTROL         "",IDC_RICHEDIT_PROVIDER,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,74,59,14
-    CONTROL         "",IDC_RICHEDIT_OPERATOR,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,74,59,14
-    CONTROL         "",IDC_RICHEDIT_DEPARTMENT,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,248,74,59,14
+    COMBOBOX        IDC_COMBO_PROVIDER,57,70,59,234,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_OPERATOR,159,70,59,241,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_DEPARTMENT,249,70,59,143,CBS_DROPDOWN | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER_PAYMENT,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,71,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,68,
                     59,14
+    COMBOBOX        IDC_COMBO_STORAGE,57,93,59,222,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_RICHEDIT_DIGEST,"RICHEDIT",ES_AUTOHSCROLL | 
+                    WS_BORDER | WS_TABSTOP,159,91,258,14
+    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,42,83,14,ES_AUTOHSCROLL
     CONTROL         "List1",IDC_LIST_STORAGE_IN,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,6,117,453,180
     PUSHBUTTON      "导出",IDC_EXCEL,16,6,38,14
     PUSHBUTTON      "打印",IDC_BUTTON_PRINT,69,6,38,14
-    PUSHBUTTON      "新建",IDC_BUTTON_NEW,142,6,38,14
-    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,290,6,38,14
-    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,335,6,38,14
-    LTEXT           "供应商：",IDC_STATIC,16,75,33,8
-    LTEXT           "经办人：",IDC_STATIC,123,75,33,8
-    LTEXT           "部门：",IDC_STATIC,223,75,25,8
-    LTEXT           "付款日期：",IDC_STATIC,314,75,41,8
+    PUSHBUTTON      "新增",IDC_BUTTON_NEW,142,6,38,14
+    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,240,6,38,14
+    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,285,6,38,14
+    LTEXT           "供应商：",IDC_STATIC,16,74,33,8
+    LTEXT           "经办人：",IDC_STATIC,123,74,33,8
+    LTEXT           "部门：",IDC_STATIC,223,74,25,8
+    LTEXT           "付款日期：",IDC_STATIC,314,74,41,8
     LTEXT           "收货仓库：",IDC_STATIC,16,97,41,8
     LTEXT           "摘要：",IDC_STATIC,122,95,25,8
-    LTEXT           "进货单",IDC_STATIC,16,41,25,8
+    LTEXT           "进货单",IDC_STATIC1,16,41,25,8
     LTEXT           "制单日期：",IDC_STATIC,398,27,41,8
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_CURRENT,
                     "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,442,22,
                     83,15
     LTEXT           "单据编号：",IDC_STATIC,399,46,41,8
-    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,42,83,14,ES_AUTOHSCROLL
-    CONTROL         "",IDC_RICHEDIT_STORAGE,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,93,59,14
-    CONTROL         "",IDC_RICHEDIT_DIGEST,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,91,261,14
-    CONTROL         "",IDC_RICHEDIT_MODIFY,"RICHEDIT",ES_AUTOHSCROLL | NOT 
-                    WS_VISIBLE | WS_BORDER | WS_TABSTOP,446,73,9,14
-    EDITTEXT        IDC_EDIT_MODIFY2,437,71,8,14,ES_AUTOHSCROLL | NOT 
-                    WS_VISIBLE
-    PUSHBUTTON      "修改",IDC_BUTTON_MODIFY,191,6,38,14
-    PUSHBUTTON      "查询",IDC_BUTTON_QUERY,243,6,38,14
+    PUSHBUTTON      "修改",IDC_BUTTON_MODIFY,339,6,38,14,NOT WS_VISIBLE
+    PUSHBUTTON      "查询",IDC_BUTTON_QUERY,193,6,38,14
     CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,5,303,455,11
 END
@@ -1289,65 +1291,66 @@ IDD_DIALOG_STORAGE_IN_DETAIL DIALOG DISCARDABLE  0, 0, 400, 312
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_END,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,230,5,55,
+    COMBOBOX        IDC_COMBO_WAY,47,8,53,134,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_SUBWAY,106,8,53,300,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_BEGIN,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,180,5,55,
                     15
-    DEFPUSHBUTTON   "查询",IDOK,297,6,38,14
-    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,352,6,38,14
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_END,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,247,5,55,
+                    15
+    DEFPUSHBUTTON   "查询",IDOK,310,6,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,355,6,38,14
     CONTROL         "List1",IDC_LIST_STORAGE_DETAIL,"SysListView32",
                     LVS_REPORT | WS_BORDER | WS_TABSTOP,0,27,400,264
-    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_BEGIN,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,163,5,55,
-                    15
-    LTEXT           "到",IDC_STATIC,220,9,9,8
-    LTEXT           "从",IDC_STATIC,151,9,9,8
+    LTEXT           "到",IDC_STATIC,237,9,9,8
+    LTEXT           "从",IDC_STATIC,168,9,9,8
     CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,302,400,10
+    LTEXT           "查询方式：",IDC_STATIC,5,11,41,8
 END
 
 IDD_DIALOG_STORAGE_OUT DIALOG DISCARDABLE  0, 0, 554, 320
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    CONTROL         "",IDC_RICHEDIT_PROVIDER,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,74,59,14
-    CONTROL         "",IDC_RICHEDIT_OPERATOR,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,74,59,14
-    CONTROL         "",IDC_RICHEDIT_DEPARTMENT,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,248,74,59,14
-    CONTROL         "",IDC_RICHEDIT_STORAGE,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,56,93,59,14
+    COMBOBOX        IDC_COMBO_PROVIDER,54,71,59,221,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_OPERATOR,159,71,59,223,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_DEPARTMENT,248,71,59,228,CBS_DROPDOWN | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER_PAYMENT,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,356,69,
+                    59,14
+    COMBOBOX        IDC_COMBO_STORAGE,54,92,59,216,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_RICHEDIT_DIGEST,"RICHEDIT",ES_AUTOHSCROLL | 
-                    WS_BORDER | WS_TABSTOP,156,91,261,14
+                    WS_BORDER | WS_TABSTOP,158,91,257,14
+    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,42,83,14,ES_AUTOHSCROLL
     CONTROL         "List1",IDC_LIST_STORAGE_IN,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,6,117,453,180
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_CURRENT,
                     "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,442,22,
                     83,15
-    EDITTEXT        IDC_EDIT_STORAGE_IN_ID,442,42,83,14,ES_AUTOHSCROLL
     PUSHBUTTON      "导出",IDC_EXCEL,16,6,38,14
     PUSHBUTTON      "打印",IDC_BUTTON_PRINT,69,6,38,14
-    PUSHBUTTON      "新建",IDC_BUTTON_NEW,142,6,38,14
-    PUSHBUTTON      "修改",IDC_BUTTON_MODIFY,191,6,38,14
-    PUSHBUTTON      "查询",IDC_BUTTON_QUERY,243,6,38,14
-    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,290,6,38,14
-    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,335,6,38,14
-    CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER_PAYMENT,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,357,71,
-                    59,14
+    PUSHBUTTON      "新增",IDC_BUTTON_NEW,142,6,38,14
+    PUSHBUTTON      "修改",IDC_BUTTON_MODIFY,337,6,38,14,NOT WS_VISIBLE
+    PUSHBUTTON      "查询",IDC_BUTTON_QUERY,192,6,38,14
+    PUSHBUTTON      "保存",IDC_BUTTON_SAVE,240,6,38,14
+    PUSHBUTTON      "关闭",IDC_BUTTON_QUIT,285,6,38,14
     LTEXT           "取货人：",IDC_STATIC,16,75,33,8
     LTEXT           "经办人：",IDC_STATIC,123,75,33,8
     LTEXT           "部门：",IDC_STATIC,223,75,25,8
-    LTEXT           "付款日期：",IDC_STATIC,314,75,41,8
+    LTEXT           "取货日期：",IDC_STATIC,314,75,41,8
     LTEXT           "仓库：",IDC_STATIC,16,97,25,8
     LTEXT           "摘要：",IDC_STATIC,122,95,25,8
-    LTEXT           "出货单",IDC_STATIC,16,41,25,8
+    LTEXT           "出库单",IDC_STATIC,16,41,25,8
     LTEXT           "制单日期：",IDC_STATIC,398,27,41,8
     LTEXT           "单据编号：",IDC_STATIC,399,46,41,8
-    CONTROL         "",IDC_RICHEDIT_MODIFY,"RICHEDIT",ES_AUTOHSCROLL | NOT 
-                    WS_VISIBLE | WS_BORDER | WS_TABSTOP,446,73,9,14
-    EDITTEXT        IDC_EDIT_MODIFY2,437,71,8,14,ES_AUTOHSCROLL | NOT 
-                    WS_VISIBLE
     CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,5,303,455,11
 END
@@ -1356,20 +1359,67 @@ IDD_DIALOG_STORAGE_OUT_DETAIL DIALOG DISCARDABLE  0, 0, 400, 312
 STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
-    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_END,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,230,5,55,
+    COMBOBOX        IDC_COMBO_WAY,47,8,53,134,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_SUBWAY,106,8,53,300,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_BEGIN,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,180,5,55,
                     15
-    DEFPUSHBUTTON   "查询",IDOK,297,6,38,14
-    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,352,6,38,14
+    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_END,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,247,5,55,
+                    15
+    DEFPUSHBUTTON   "查询",IDOK,310,6,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,355,6,38,14
     CONTROL         "List1",IDC_LIST_STORAGE_DETAIL,"SysListView32",
                     LVS_REPORT | WS_BORDER | WS_TABSTOP,0,27,400,267
-    CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER_BEGIN,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,163,5,55,
-                    15
-    LTEXT           "到",IDC_STATIC,220,9,9,8
-    LTEXT           "从",IDC_STATIC,151,9,9,8
+    LTEXT           "到",IDC_STATIC,237,9,9,8
+    LTEXT           "从",IDC_STATIC,168,9,9,8
     CONTROL         "List1",IDC_LIST_TOTAL,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,299,400,10
+    LTEXT           "查询方式：",IDC_STATIC,5,11,41,8
+END
+
+IDD_DIALOG_STORAGE_LEFT2 DIALOG DISCARDABLE  0, 0, 337, 312
+STYLE WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "存货档案"
+FONT 12, "宋体"
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,221,290,38,14
+    PUSHBUTTON      "取消",IDCANCEL,287,290,38,14
+    CONTROL         "List1",IDC_LIST_STORAGE_LEFT,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,5,337,275
+    LTEXT           "（双击可选择物品）",IDC_STATIC1,42,293,73,8
+END
+
+IDD_DIALOG_STORAGE_NAME DIALOG DISCARDABLE  0, 0, 192, 230
+STYLE WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "仓  库"
+FONT 12, "宋体"
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,90,204,38,14
+    PUSHBUTTON      "取消",IDCANCEL,142,204,38,14
+    CONTROL         "List1",IDC_LIST_STORAGE_LEFT,"SysListView32",LVS_REPORT | 
+                    WS_BORDER | WS_TABSTOP,0,5,192,188
+    LTEXT           "（双击可选择仓库）",IDC_STATIC1,5,207,73,8
+END
+
+IDD_DIALOG_STORAGE_ID DIALOG DISCARDABLE  0, 0, 178, 66
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "输入单据编号"
+FONT 12, "宋体"
+BEGIN
+    EDITTEXT        IDC_EDIT_ID,62,14,96,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "确定",IDOK,12,42,50,14
+    PUSHBUTTON      "取消",IDCANCEL,107,42,50,14
+    LTEXT           "单据编号：",IDC_STATIC,13,17,41,8
+END
+
+IDD_DIALOG_STORAGE_PRINT DIALOG DISCARDABLE  0, 0, 300, 353
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "打印预览"
+FONT 12, "@宋体"
+BEGIN
 END
 
 
@@ -1512,7 +1562,7 @@ BEGIN
     BEGIN
         RIGHTMARGIN, 560
         TOPMARGIN, 7
-        BOTTOMMARGIN, 370
+        BOTTOMMARGIN, 394
     END
 
     IDD_DIALOG_LIST_QUERY, DIALOG
@@ -1551,6 +1601,11 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 170
         TOPMARGIN, 7
+    END
+
+    IDD_DIALOG_STORAGE_PRINT, DIALOG
+    BEGIN
+        RIGHTMARGIN, 299
     END
 END
 #endif    // APSTUDIO_INVOKED
