进货或出库 选择物品或仓库 改由双击变为 右键选择

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -1656,7 +1656,16 @@ BEGIN
     END
 END
 
-IDR_MENU_POST MENU DISCARDABLE 
+IDR_MENU_STORAGE MENU DISCARDABLE 
+BEGIN
+    POPUP "选择物品"
+    BEGIN
+        MENUITEM "选择仓库",                    ID_MENUITEM_SELECT_STORAGE
+        MENUITEM "选择物品",                    ID_MENUITEM_SELECT_ITEM
+    END
+END
+
+IDR_MENU_POST1 MENU DISCARDABLE 
 BEGIN
     POPUP "过账"
     BEGIN
