1.增加滚动条 在新增订单，修改订单，过账 2.导出到excel时，部分数据标为红色 ，在新增订单，修改订单

--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -671,129 +671,129 @@ BEGIN
     PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,207,284,50,14
 END
 
-IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 563, 400
-STYLE WS_CHILD
+IDD_DIALOG_MODIFY_LIST1 DIALOG DISCARDABLE  0, 0, 563, 439
+STYLE WS_CHILD | WS_VSCROLL | WS_HSCROLL
 FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_QUERYLISTID,65,15,74,14,ES_AUTOHSCROLL
     PUSHBUTTON      "查询",IDC_BUTTON1,164,15,50,14
-    EDITTEXT        IDC_EDIT_LISTTNAME,218,70,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PEOPLE,364,70,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_RECEIVE_NAME,88,92,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PHONE,218,92,74,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ADDRESS,364,90,162,14,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO_DEPARTMENT,88,114,74,82,CBS_DROPDOWNLIST | 
+    EDITTEXT        IDC_EDIT_LISTTNAME,218,73,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PEOPLE,364,73,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_RECEIVE_NAME,88,95,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PHONE,218,95,74,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ADDRESS,364,93,162,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO_DEPARTMENT,88,117,74,82,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_RECEIVEDATE,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,218,113,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,218,116,
                     74,15
     CONTROL         "DateTimePicker4",IDC_DATETIMEPICKER_ENDDATE,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,364,113,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,364,116,
                     74,15
     CONTROL         "建模",IDC_CHECK_MODELING,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,44,157,31,10
+                    WS_TABSTOP,44,176,31,10
     CONTROL         "设计服务",IDC_CHECK_DESIGN_SERVER,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,110,157,46,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,110,176,46,10
     CONTROL         "扫描业务",IDC_CHECK_SCAN,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,192,157,46,10
+                    WS_TABSTOP,192,176,46,10
     CONTROL         "模型打印",IDC_CHECK_MODELING_PRINT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,274,157,46,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,274,176,46,10
     CONTROL         "有模型",IDC_CHECK_HAS_MODELING,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,343,157,38,10
+                    WS_TABSTOP,343,176,38,10
     CONTROL         "无模型",IDC_CHECK_NO_MODELING,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,394,157,38,10
-    COMBOBOX        IDC_COMBO_SIZE,86,178,219,155,CBS_DROPDOWN | CBS_SORT | 
+                    WS_TABSTOP,394,176,38,10
+    COMBOBOX        IDC_COMBO_SIZE,86,197,219,155,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_TOTEL_NUMBER,355,177,48,14,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO_MATERIAL,458,179,76,123,CBS_DROPDOWN | 
+    EDITTEXT        IDC_EDIT_TOTEL_NUMBER,355,196,48,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO_MATERIAL,458,198,76,123,CBS_DROPDOWN | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_COLOR,85,202,54,60,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_COLOR,85,221,54,60,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_PAINT,169,202,60,30,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_PAINT,169,221,60,30,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_SHINE,264,203,48,59,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_SHINE,264,222,48,59,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_BOTTOM,355,202,48,55,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_BOTTOM,355,221,48,55,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_BILL,458,203,76,30,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_BILL,458,221,76,30,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_USAGE,86,225,131,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_ERRORRANGE,264,225,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_MONDY,355,225,48,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_VOLUEME,463,225,50,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_USAGE,86,244,131,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ERRORRANGE,264,244,48,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MONDY,355,244,48,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_VOLUEME,463,244,50,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RICHEDIT_OTHER,"RICHEDIT",ES_MULTILINE | 
-                    ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,249,422,26
-    PUSHBUTTON      "修改订单",IDC_BUTTON_MODIFYLIST,109,292,50,14
-    PUSHBUTTON      "取消",IDCANCEL,429,292,50,14,NOT WS_VISIBLE
-    DEFPUSHBUTTON   "确定",IDOK,484,292,50,14,NOT WS_VISIBLE
-    EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,335,50,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,476,335,50,14
-    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,72,357,50,14
-    GROUPBOX        "订单资料",IDC_STATIC,15,36,534,280
-    EDITTEXT        IDC_EDIT_LISTID,88,70,74,14,ES_AUTOHSCROLL | WS_DISABLED
-    EDITTEXT        IDC_EDIT_DEPARTMENT,88,114,6,14,ES_AUTOHSCROLL | NOT 
+                    ES_AUTOVSCROLL | WS_BORDER | WS_TABSTOP,86,268,422,26
+    PUSHBUTTON      "修改订单",IDC_BUTTON_MODIFYLIST,109,311,50,14
+    PUSHBUTTON      "取消",IDCANCEL,429,311,50,14,NOT WS_VISIBLE
+    DEFPUSHBUTTON   "确定",IDOK,484,311,50,14,NOT WS_VISIBLE
+    EDITTEXT        IDC_EDIT1_TRUE_NUMBER,122,371,50,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "下单",IDC_BUTTON_START_LIST,73,396,50,14
+    PUSHBUTTON      "结单",IDC_BUTTON_END_LIST,143,396,50,14
+    GROUPBOX        "订单资料",IDC_STATIC,15,39,534,297
+    EDITTEXT        IDC_EDIT_LISTID,88,73,74,14,ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_EDIT_DEPARTMENT,88,117,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_SIZE,86,177,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_SIZE,86,196,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_MATERIAL,463,177,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_MATERIAL,463,196,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_COLOR,86,201,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_COLOR,86,220,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_PAINT,178,201,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_PAINT,178,220,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_SHINE,264,201,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_SHINE,264,220,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_BOTTOM,355,201,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_BOTTOM,355,220,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    EDITTEXT        IDC_EDIT_BILL,463,201,6,14,ES_AUTOHSCROLL | NOT 
+    EDITTEXT        IDC_EDIT_BILL,463,220,6,14,ES_AUTOHSCROLL | NOT 
                     WS_VISIBLE
-    LTEXT           "订单号：",IDC_STATIC,43,76,38,8
-    LTEXT           "派单日期：",IDC_STATIC,176,120,42,8
-    LTEXT           "订单名称：",IDC_STATIC,176,76,42,8
-    LTEXT           "交货日期：",IDC_STATIC,310,120,44,8
-    LTEXT           "部门：",IDC_STATIC,43,120,40,8
-    LTEXT           "详细地址：",IDC_STATIC,310,98,43,8
-    LTEXT           "联系电话：",IDC_STATIC,176,98,42,8
-    LTEXT           "签单金额：",IDC_STATIC,312,231,41,8
-    LTEXT           "尺寸：",IDC_STATIC,43,183,27,8
-    LTEXT           "制作材料：",IDC_STATIC,415,183,40,8
-    LTEXT           "颜色：",IDC_STATIC,43,207,27,8
-    LTEXT           "喷漆：",IDC_STATIC,142,207,27,8
-    LTEXT           "底座搭配：",IDC_STATIC,312,207,43,8
-    LTEXT           "体积：",IDC_STATIC,431,231,27,8
-    LTEXT           "误差范围：",IDC_STATIC,219,231,40,8
-    LTEXT           "其他要求：",IDC_STATIC,43,255,41,8
-    LTEXT           "数量：",IDC_STATIC,73,341,31,8
-    LTEXT           "收件人：",IDC_STATIC,43,98,34,8
-    LTEXT           "经办人：",IDC_STATIC,310,76,37,8
-    LTEXT           "生产数量：",IDC_STATIC,312,183,40,8
-    LTEXT           "打磨：",IDC_STATIC,234,207,26,8
-    LTEXT           "发票随寄：",IDC_STATIC,415,207,42,8
-    LTEXT           "用途：",IDC_STATIC,43,231,29,8
-    GROUPBOX        "下单",IDC_STATIC,15,320,534,61
-    GROUPBOX        "基本信息",IDC_STATIC,28,56,509,83
-    GROUPBOX        "制作要求",IDC_STATIC,28,144,509,143
-    LTEXT           "（",IDC_STATIC,324,159,8,8
-    LTEXT           "）",IDC_STATIC,436,159,8,8
+    LTEXT           "订单号：",IDC_STATIC,43,79,38,8
+    LTEXT           "派单日期：",IDC_STATIC,176,123,42,8
+    LTEXT           "订单名称：",IDC_STATIC,176,79,42,8
+    LTEXT           "交货日期：",IDC_STATIC,310,123,44,8
+    LTEXT           "部门：",IDC_STATIC,43,123,40,8
+    LTEXT           "详细地址：",IDC_STATIC,310,101,43,8
+    LTEXT           "联系电话：",IDC_STATIC,176,101,42,8
+    LTEXT           "签单金额：",IDC_STATIC,312,250,41,8
+    LTEXT           "尺寸：",IDC_STATIC,43,202,27,8
+    LTEXT           "制作材料：",IDC_STATIC,415,202,40,8
+    LTEXT           "颜色：",IDC_STATIC,43,226,27,8
+    LTEXT           "喷漆：",IDC_STATIC,142,226,27,8
+    LTEXT           "底座搭配：",IDC_STATIC,312,226,43,8
+    LTEXT           "体积：",IDC_STATIC,431,250,27,8
+    LTEXT           "误差范围：",IDC_STATIC,219,250,40,8
+    LTEXT           "其他要求：",IDC_STATIC,43,274,41,8
+    LTEXT           "数量：",IDC_STATIC,73,377,31,8
+    LTEXT           "收件人：",IDC_STATIC,43,101,34,8
+    LTEXT           "经办人：",IDC_STATIC,310,79,37,8
+    LTEXT           "生产数量：",IDC_STATIC,312,202,40,8
+    LTEXT           "打磨：",IDC_STATIC,234,226,26,8
+    LTEXT           "发票随寄：",IDC_STATIC,415,226,42,8
+    LTEXT           "用途：",IDC_STATIC,43,250,29,8
+    GROUPBOX        "下单",IDC_STATIC,15,356,534,61
+    GROUPBOX        "基本信息",IDC_STATIC,28,59,509,83
+    GROUPBOX        "制作要求",IDC_STATIC,28,163,509,143
+    LTEXT           "（",IDC_STATIC,324,178,8,8
+    LTEXT           "）",IDC_STATIC,436,178,8,8
     LTEXT           "订单号：",IDC_STATIC,21,21,37,8
-    LTEXT           "cm3",IDC_STATIC,514,228,13,8
-    LTEXT           "元",IDC_STATIC,408,231,8,8
+    LTEXT           "cm3",IDC_STATIC,514,247,13,8
+    LTEXT           "元",IDC_STATIC,408,250,8,8
     CONTROL         "加急",IDC_CHECK_URGENT,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,458,157,32,10
-    PUSHBUTTON      "销单",IDC_BUTTON_UNDO_LIST,146,357,50,14
-    PUSHBUTTON      "续单",IDC_BUTTON_CONTINUE_LIST,216,357,50,14
-    PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,362,292,50,14,NOT 
+                    WS_TABSTOP,458,176,32,10
+    PUSHBUTTON      "销单",IDC_BUTTON_UNDO_LIST,217,396,50,14
+    PUSHBUTTON      "续单",IDC_BUTTON_CONTINUE_LIST,287,396,50,14
+    PUSHBUTTON      "打印预览",IDC_BUTTON_PREVIEW,362,311,50,14,NOT 
                     WS_VISIBLE
-    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,274,292,50,14
-    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,190,292,50,14
+    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,274,311,50,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,190,311,50,14
     CONTROL         "DateTimePicker3",IDC_DATETIMEPICKER_START2,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,229,334,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,229,370,
                     74,15
     CONTROL         "DateTimePicker4",IDC_DATETIMEPICKER_END2,
-                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,375,334,
+                    "SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,375,370,
                     74,15
-    LTEXT           "下单日期：",IDC_STATIC,187,341,42,8
-    LTEXT           "交货日期：",IDC_STATIC,321,341,44,8
+    LTEXT           "下单日期：",IDC_STATIC,187,377,42,8
+    LTEXT           "交货日期：",IDC_STATIC,321,377,44,8
 END
 
 IDD_DIALOG_LIST_QUERY DIALOG DISCARDABLE  0, 0, 539, 353
@@ -1560,9 +1560,8 @@ BEGIN
 
     IDD_DIALOG_MODIFY_LIST1, DIALOG
     BEGIN
-        RIGHTMARGIN, 560
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 394
+        RIGHTMARGIN, 552
+        BOTTOMMARGIN, 385
     END
 
     IDD_DIALOG_LIST_QUERY, DIALOG
