--- a/GoodsManageSystem.rc
+++ b/GoodsManageSystem.rc
@@ -1516,25 +1516,27 @@ STYLE WS_CHILD
 FONT 12, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT_LIST,68,6,68,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "增加",IDC_BUTTON_QUERY,145,5,38,14
-    PUSHBUTTON      "删除",IDC_BUTTON_DELETE,191,5,38,14
-    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,236,5,38,14
-    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,280,5,38,14,NOT WS_VISIBLE
-    COMBOBOX        IDC_COMBO_BASEINFO,379,5,16,101,CBS_DROPDOWNLIST | 
+    DEFPUSHBUTTON   "增加/查询",IDC_BUTTON_QUERY,279,5,38,14
+    PUSHBUTTON      "删除",IDC_BUTTON_DELETE,325,5,38,14
+    PUSHBUTTON      "导出",IDC_BUTTON_EXCEL,370,5,38,14
+    PUSHBUTTON      "打印",IDC_BUTTON_PRINT,414,5,38,14,NOT WS_VISIBLE
+    COMBOBOX        IDC_COMBO_BASEINFO,446,5,16,101,CBS_DROPDOWNLIST | 
                     CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_SUBWAY,398,6,16,192,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_SUBWAY,465,6,16,192,CBS_DROPDOWN | CBS_SORT | 
                     NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,432,4,6,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,154,5,54,15
     CONTROL         "DateTimePicker2",IDC_DATETIMEPICKER2,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | NOT WS_VISIBLE | WS_TABSTOP,442,5,8,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,220,5,54,15
     CONTROL         "List1",IDC_LIST_BASEINFO,"SysListView32",LVS_REPORT | 
                     WS_BORDER | WS_TABSTOP,0,27,496,283
-    COMBOBOX        IDC_COMBO_STORE,413,6,16,189,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_COMBO_STORE,480,6,16,189,CBS_DROPDOWN | CBS_SORT | 
                     NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
     CONTROL         "全选",IDC_CHECK_SELECTALL,"Button",BS_AUTOCHECKBOX | 
                     NOT WS_VISIBLE | WS_TABSTOP,3,10,32,10
     LTEXT           "订单号：",IDC_STATIC,35,10,33,8
+    LTEXT           "到",IDC_STATIC,210,9,9,8
+    LTEXT           "从",IDC_STATIC,143,9,9,8
 END
 
 
@@ -1729,11 +1731,6 @@ BEGIN
     IDD_DIALOG_LIST_SHIPPING_PRINT, DIALOG
     BEGIN
         RIGHTMARGIN, 299
-    END
-
-    IDD_DIALOG_LIST_EXPRESS, DIALOG
-    BEGIN
-        RIGHTMARGIN, 481
     END
 END
 #endif    // APSTUDIO_INVOKED
